# parsy

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  RELEASE.rst  conftest.py  pyproject.toml  pytest.ini  release.sh  setup.cfg  setup.py  tox.ini  travis_tests.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
docs/: Makefile  conf.py  contributing.rst  examples.rst  generating.rst  history.rst  hollerith  index.rst  installation.rst  make.bat  methods_and_combinators.rst  overview.rst  primitives.rst  requirements.txt  tutorial.rst
docs/howto/: index.rst  lexing.rst  other_examples.rst
docs/ref/: generating.rst  index.rst  methods_and_combinators.rst  parser_instances.rst  primitives.rst
examples/: json.py  proto3.py  simple_eval.py  simple_logo_lexer.py  simple_logo_parser.py  sql_select.py
src/parsy/: __init__.py  py.parsed  version.py
test/: parsy_test.py  sexpr_test.py  test_parsy.py  test_sexpr.py
tests/: requirements-isort.txt  requirements-linters.txt  requirements-tests.txt  test_parsy.py  test_sexpr.py  test_typing.py
