[metadata]
name = parsy
version = attr: parsy.__version__
description = Easy-to-use parser combinators, for parsing in pure Python
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Jeanine Adkisson
author_email = jneen@jneen.net
maintainer = Luke Plant
maintainer_email = L.Plant.98@cantab.net
url = https://github.com/python-parsy/parsy
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Interpreters
    Topic :: Text Processing
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
keywords = parser parsers parsing monad combinators

[options]
python_requires = >=3.7
packages = find:
package_dir = =src

[options.packages.find]
where = src

[flake8]
exclude = .tox,.git,docs,dist,build,todo
ignore = E731,E221,W503,E741,E203
max-line-length = 119
